--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -13,5 +13,11 @@
     </ion-toolbar>
   </ion-header>
 
+  <ion-list>
+    <ion-item *ngFor="let email of algo">
+      <ion-label>{{ email.email }}</ion-label>
+    </ion-item>
+  </ion-list>
+
   <app-explore-container name="Tab 2 page"></app-explore-container>
 </ion-content>
